--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
